test/Common/LinkerScriptParsing/Errors/Sections/OutputSectionPrologue/OutSectAlign/Inputs/script2.t
SECTIONS {
  FOO : SUBALIGN(0xasdf) { *(*foo*) }
}